overflow fix

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     color: #363636;
+    overflow-x: hidden;
 }
 
 p {
